# sre-skills-bench

./: .gitignore  CLAUDE.md  README.md  plot_benchmark.py  pyproject.toml
.github/: dependabot.yml
benchmarks/terraform/: .env.example  README.md  docker-compose.yml  models.json  pyproject.toml  run.sh
benchmarks/terraform/src/terraform_generation_bench/: benchmark.py  benchmark_cli.py  display.py  llm_client.py  report_generator.py  terraform_generator.py
benchmarks/terraform/src/terraform_generation_bench/runner/: __init__.py  checks.py  run_task.py  utils.py
benchmarks/terraform/tasks/terraform_generation/task_ec2_instance_profile/: prompt.txt  spec.yaml
benchmarks/terraform/tasks/terraform_generation/task_iam_role_policy/: prompt.txt  spec.yaml
benchmarks/terraform/tasks/terraform_generation/task_s3_bucket_policy/: prompt.txt  spec.yaml
benchmarks/terraform/tasks/terraform_generation/task_s3_cors_configuration/: prompt.txt  spec.yaml
benchmarks/terraform/tasks/terraform_generation/task_s3_lifecycle_versioning/: prompt.txt  spec.yaml
benchmarks/terraform/tasks/terraform_generation/task_s3_public_access_block/: prompt.txt  spec.yaml
benchmarks/terraform/tasks/terraform_generation/task_security_group_complex/: prompt.txt  spec.yaml
benchmarks/terraform/tasks/terraform_generation/task_vpc_3subnets_3ec2/: prompt.txt  spec.yaml
benchmarks/terraform/tasks/terraform_generation/task_vpc_internet_gateway/: prompt.txt  spec.yaml
benchmarks/terraform/tasks/terraform_generation/task_vpc_multiple_route_tables/: prompt.txt  spec.yaml
(+41 files in other folders)
