[project]
name = "sre-skills-bench"
version = "0.1.0"
description = "Benchmark suite for evaluating LLMs on Site Reliability Engineering tasks. Each sub-benchmark under benchmarks/ is self-contained with its own pyproject."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "matplotlib>=3.10.7",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["plot_benchmark"]
